--- a/HosMgmt/src/app/app.component.html
+++ b/HosMgmt/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1 style="text-align: center; font-size: larger,bold;">Welcome To  The Hospital</h1>
+<p>Please fill the form</p>
 <div>
     <ul class="nav nav-tabs">
         <li routerLinkActive="active">
