--- a/HosMgmt/src/app/app.component.html
+++ b/HosMgmt/src/app/app.component.html
@@ -5,6 +5,9 @@
         <li routerLinkActive="active">
             <a routerLink="patient-list">patient-list</a>
         </li>
+        <li routerLinkActive="active">
+            <a routerLink="patient">patient</a>
+        </li>
     </ul>
 </div>
 <router-outlet></router-outlet>
