--- a/HosMgmt/src/app/patient-list/patient-list.component.html
+++ b/HosMgmt/src/app/patient-list/patient-list.component.html
@@ -1,5 +1,5 @@
 <p>patient-list works!</p>
 <p>List of Patients.</p>
 <ul *ngFor = "let patient of patients">
-  <li>{{patients.firstName}} </li>
+  <li>{{patient.firstName}} </li>
 </ul>
